--- a/templates/index.html
+++ b/templates/index.html
@@ -204,6 +204,17 @@
       outline: none;
     }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FGGGQ8VJFL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-FGGGQ8VJFL');
+  </script>
+  <!-- End Google Analytics -->
+
 </head>
 
 <body>
